fix: carrousel bullets botton margin fixed on tablets

--- a/src/app/projetos/SubComponentes/CarouselComponent/carousel.css
+++ b/src/app/projetos/SubComponentes/CarouselComponent/carousel.css
@@ -22,20 +22,15 @@
     --swiper-pagination-bullet-inactive-opacity: 0.5;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 850px) {
     .container-carousel {
         max-width: 200px;
     }
     :root {
         --swiper-navigation-size: 20px; 
-      }
-}
-
-@media (max-width: 375px) {
-    :root {
-        --swiper-pagination-bottom: 7vw; /* Define um valor padrão, pode ser ajustado conforme necessário */
+        --swiper-pagination-bottom: 3vw; /* Define um valor padrão, pode ser ajustado conforme necessário */
         --swiper-pagination-top: auto;
-      }
+    }
       
       .swiper-pagination-fraction, 
       .swiper-pagination-custom, 
@@ -43,4 +38,12 @@
       .swiper-pagination-bullets.swiper-pagination-horizontal {
         bottom: var(--swiper-pagination-bottom);
       }
+}
+
+@media (max-width: 450px) {
+    :root {
+        --swiper-navigation-size: 20px; 
+        --swiper-pagination-bottom: 7vw; /* Define um valor padrão, pode ser ajustado conforme necessário */
+        --swiper-pagination-top: auto;
+    }
 }
